--- a/index.html
+++ b/index.html
@@ -31,10 +31,19 @@
   </nav>
   <!--navbar end-->
 
+  <!--ini hero section-->
+<section class="hero" id="home">
+    <main class="content">
+        <h1>mari nikmati secangkir<span>kopi</span></h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil inventore numquam eaque amet omnis? Mollitia velit maiores, facilis incidunt labore sequi veritatis doloribus eum recusandae laboriosam alias ducimus harum reiciendis!</p>
+<a href="#" class="cta"> dibeli sekarang</a>
+</main>
+</section>
+    <!--ini hero section end-->
+    
   <script>
     feather.replace();
   </script>
 
   <script src="script.js"></script>
- 
 </body>
