--- a/index.html
+++ b/index.html
@@ -32,15 +32,46 @@
   <!--navbar end-->
 
   <!--ini hero section-->
-<section class="hero" id="home">
+  <section class="hero" id="home">
     <main class="content">
-        <h1>mari nikmati secangkir<span>kopi</span></h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil inventore numquam eaque amet omnis? Mollitia velit maiores, facilis incidunt labore sequi veritatis doloribus eum recusandae laboriosam alias ducimus harum reiciendis!</p>
-<a href="#" class="cta"> dibeli sekarang</a>
-</main>
-</section>
-    <!--ini hero section end-->
+      <h1>mari nikmati secangkir<span>kopi</span></h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil inventore
+        numquam eaque amet omnis? Mollitia velit maiores, facilis incidunt
+        labore sequi veritatis doloribus eum recusandae laboriosam alias ducimus
+        harum reiciendis!
+      </p>
+      <a href="#" class="cta"> dibeli sekarang</a>
+    </main>
+  </section>
+  <!--ini hero section end-->
 
+  <!--ini about section start-->
+  <section id="about" class="about">
+    <h2><span>tentang</span> kami</h2>
+
+    <div class="row">
+      <div class="about-img">
+        <img src="fotoKopi.jpg" alt="tentangkami" />
+      </div>
+      <div class="content">
+        <h3>Kenapa memilih kopi kami?</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
+          libero esse voluptatibus voluptatem? Veniam reiciendis ab, aliquam
+          sequi debitis enim voluptate suscipit? Aperiam quibusdam aliquid
+          accusamus dolorem dolorum deserunt sed.
+        </p>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati,
+          quia tenetur sequi non saepe delectus eos culpa possimus dolorum
+          voluptates repellendus inventore iure sunt, ipsam exercitationem est?
+          Fuga, pariatur explicabo!
+        </p>
+      </div>
+    </div>
+  </section>
+  <!-- about section end-->
   <script>
     feather.replace();
   </script>
