--- a/index.html
+++ b/index.html
@@ -72,6 +72,12 @@
     </div>
   </section>
   <!-- about section end-->
+
+  <!--menu section starto-->
+<section id="menu" class="menu">
+    <h2><span>menu</span> kami</h2>
+</section>
+  <!--menu section end-->
   <script>
     feather.replace();
   </script>
