--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <!--navbar start-->
   <nav class="navbar">
-    <a href="#" class="navbar-logo">kenangan<span>senja</span>.</a>
+    <a href="#" class="navbar-logo">kenangan<span>kita</span>.</a>
     <div class="navbar-nav">
       <a href="#">home</a>
       <a href="#about">tentang kami</a>
@@ -31,10 +31,11 @@
   </nav>
   <!--navbar end-->
 
-  <!--ini hero section-->
+  <!--ini hero section--
   <section class="hero" id="home">
     <main class="content">
-      <h1>mari nikmati secangkir<span>kopi</span></h1>
+      <h1>mari nikmati secangkir kopi hangat<span> bersama
+      </span></h1>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil inventore
         numquam eaque amet omnis? Mollitia velit maiores, facilis incidunt
@@ -46,7 +47,7 @@
   </section>
   <!--ini hero section end-->
 
-  <!--ini about section start-->
+  <!--ini about section start--
   <section id="about" class="about">
     <h2><span>tentang</span> kami</h2>
 
@@ -73,10 +74,47 @@
   </section>
   <!-- about section end-->
 
-  <!--menu section starto-->
-<section id="menu" class="menu">
+  <!--menu section starto--
+  <section id="menu" class="menu">
     <h2><span>menu</span> kami</h2>
-</section>
+    <p>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem
+      maxime repellat culpa vitae voluptatibus ad.
+    </p>
+    <div class="row">
+      <div class="menu-card">
+        <img src="foto espressoh.jpg" alt="espressoh" class="menu-card-img" />
+        <h3 class="menu-card-title">- espresso -</h3>
+        <p class="menu-card-price">IDR 15K</p>
+      </div>
+      <div class="menu-card">
+        <img src="latte.jpg" alt="latte" class="menu-card-img" />
+        <h3 class="menu-card-title">- espresso -</h3>
+        <p class="menu-card-price">IDR 15K</p>
+      </div>
+            <div class="menu-card">
+        <img src="americano.jpg" alt="americano" class="menu-card-img" />
+        <h3 class="menu-card-title">- americano -</h3>
+        <p class="menu-card-price">IDR 18K</p>
+      </div>
+            <div class="menu-card">
+        <img src="matcha.jpg" alt="matcha" class="menu-card-img" />
+        <h3 class="menu-card-title">- matcha -</h3>
+        <p class="menu-card-price">IDR 16K</p>
+      </div>
+            <div class="menu-card">
+        <img src="bolu.jpg" alt="bolu" class="menu-card-img" />
+        <h3 class="menu-card-title">- espresso -</h3>
+        <p class="menu-card-price">IDR 10K</p>
+      </div>
+            <div class="menu-card">
+        <img src="donat.jpg" alt="donat" class="menu-card-img" />
+        <h3 class="menu-card-title">- donat stroberi -</h3>
+        <p class="menu-card-price">IDR 15K</p>
+      </div>
+      </div>
+    </div>
+  </section>
   <!--menu section end-->
   <script>
     feather.replace();
