--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </nav>
   <!--navbar end-->
 
-  <!--ini hero section--
+  <!--ini hero section-->
   <section class="hero" id="home">
     <main class="content">
       <h1>mari nikmati secangkir kopi hangat<span> bersama
@@ -47,7 +47,7 @@
   </section>
   <!--ini hero section end-->
 
-  <!--ini about section start--
+  <!--ini about section start-->
   <section id="about" class="about">
     <h2><span>tentang</span> kami</h2>
 
@@ -74,7 +74,7 @@
   </section>
   <!-- about section end-->
 
-  <!--menu section starto--
+  <!--menu section starto-->
   <section id="menu" class="menu">
     <h2><span>menu</span> kami</h2>
     <p>
