--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       </div>
       <div class="menu-card">
         <img src="latte.jpg" alt="latte" class="menu-card-img" />
-        <h3 class="menu-card-title">- espresso -</h3>
+        <h3 class="menu-card-title">- latte -</h3>
         <p class="menu-card-price">IDR 15K</p>
       </div>
             <div class="menu-card">
@@ -112,6 +112,17 @@
         <h3 class="menu-card-title">- donat stroberi -</h3>
         <p class="menu-card-price">IDR 15K</p>
       </div>
+         <div class="menu-card">
+        <img src="cupcake stroberi.jpg" alt="cupcake-stroberi" class="menu-card-img" />
+        <h3 class="menu-card-title">- cupcake stroberi -</h3>
+        <p class="menu-card-price">IDR 20K</p>
+      </div>
+         <div class="menu-card">
+        <img src="cupcake.jpg" alt="cupcake" class="menu-card-img" />
+        <h3 class="menu-card-title">- cupcake -</h3>
+        <p class="menu-card-price">IDR 20K</p>
+      </div>
+
       </div>
     </div>
   </section>
