--- a/index.html
+++ b/index.html
@@ -127,6 +127,35 @@
     </div>
   </section>
   <!--menu section end-->
+
+  <!--contact section starto-->
+<seciton id="contact" class="contact">
+<h2><span>kontak</span> kami</h2>
+    <p>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem
+      maxime repellat culpa vitae voluptatibus ad.
+    </p>
+    <div class="row">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63713.710863642234!2d98.6958402!3d3.562849000000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30313125b1795edf%3A0x95d34650a0453272!2sKenangan%20kita%20Mdn%20perjuangan!5e0!3m2!1sid!2sid!4v1750166823554!5m2!1sid!2sid" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="map"></iframe>
+
+        <form action="">
+            <div class="input-group">
+                <i data-feather="user"></i>
+                <input type="text" placeholder="nama">
+            </div>
+             <div class="input-group">
+                    <i data-feather="mail"></i>
+                    <input type="text" placeholder="email">
+                </div>
+                 <div class="input-group">
+                    <i data-feather="phone"></i>
+                    <input type="text" placeholder="no hp">
+                </div>
+                <button type="submit" class="btn">kirim pesan</button>
+        </form>
+    </div>
+</seciton>
+  <!--end contact-->
   <script>
     feather.replace();
   </script>
