--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <div class="row">
       <div class="about-img">
-        <img src="fotoKopi.jpg" alt="tentangkami" />
+        <img src="img/fotoKopi.jpg" alt="tentangkami" />
       </div>
       <div class="content">
         <h3>Kenapa memilih kopi kami?</h3>
@@ -83,42 +83,42 @@
     </p>
     <div class="row">
       <div class="menu-card">
-        <img src="foto espressoh.jpg" alt="espressoh" class="menu-card-img" />
+        <img src="img/foto espressoh.jpg" alt="espressoh" class="menu-card-img" />
         <h3 class="menu-card-title">- espresso -</h3>
         <p class="menu-card-price">IDR 15K</p>
       </div>
       <div class="menu-card">
-        <img src="latte.jpg" alt="latte" class="menu-card-img" />
+        <img src="img/latte.jpg" alt="latte" class="menu-card-img" />
         <h3 class="menu-card-title">- latte -</h3>
         <p class="menu-card-price">IDR 15K</p>
       </div>
             <div class="menu-card">
-        <img src="americano.jpg" alt="americano" class="menu-card-img" />
+        <img src="img/americano.jpg" alt="americano" class="menu-card-img" />
         <h3 class="menu-card-title">- americano -</h3>
         <p class="menu-card-price">IDR 18K</p>
       </div>
             <div class="menu-card">
-        <img src="matcha.jpg" alt="matcha" class="menu-card-img" />
+        <img src="img/matcha.jpg" alt="matcha" class="menu-card-img" />
         <h3 class="menu-card-title">- matcha -</h3>
         <p class="menu-card-price">IDR 16K</p>
       </div>
             <div class="menu-card">
-        <img src="bolu.jpg" alt="bolu" class="menu-card-img" />
+        <img src="img/bolu.jpg" alt="bolu" class="menu-card-img" />
         <h3 class="menu-card-title">- espresso -</h3>
         <p class="menu-card-price">IDR 10K</p>
       </div>
             <div class="menu-card">
-        <img src="donat.jpg" alt="donat" class="menu-card-img" />
+        <img src="img/donat.jpg" alt="donat" class="menu-card-img" />
         <h3 class="menu-card-title">- donat stroberi -</h3>
         <p class="menu-card-price">IDR 15K</p>
       </div>
          <div class="menu-card">
-        <img src="cupcake stroberi.jpg" alt="cupcake-stroberi" class="menu-card-img" />
+        <img src="img/cupcake stroberi.jpg" alt="cupcake-stroberi" class="menu-card-img" />
         <h3 class="menu-card-title">- cupcake stroberi -</h3>
         <p class="menu-card-price">IDR 20K</p>
       </div>
          <div class="menu-card">
-        <img src="cupcake.jpg" alt="cupcake" class="menu-card-img" />
+        <img src="img/cupcake.jpg" alt="cupcake" class="menu-card-img" />
         <h3 class="menu-card-title">- cupcake -</h3>
         <p class="menu-card-price">IDR 20K</p>
       </div>
@@ -156,6 +156,33 @@
     </div>
 </seciton>
   <!--end contact-->
+
+  <!--footer start-->
+  <footer>
+    <div class="social">
+        <a href="#">
+            <i data-feather="instagram"></i>
+        </a>
+        <a href="#">
+            <i data-feather="twitter"></i>
+        </a>
+        <a href="#">
+            <i data-feather="facebook"></i>
+        </a>
+    </div>
+
+    <div class="links">
+        <a href="#home">home</a>
+        <a href="#about">Tentang kami</a>
+        <a href="#menu">Menu</a>
+        <a href="#contact">Kontak</a>
+    </div>
+
+    <div class="credit">
+        <p>Created by <a href="">Xia Chunyu</a> | &copy 2003.</p>
+    </div>
+  </footer>
+  <!--end-->
   <script>
     feather.replace();
   </script>
